b/316247020 Refactor class structure (#226)
* Use a more consistent naming scheme
* Split notions of:
  * Entitlement catalog, which defines who has which entitlements
  * Entitlement activator, which provisions access
* Allow more than one implementation of each

This refactoring facilitates the following:
* Adding alternate catalogs
* More efficient activation of multiple entitlements in a single request